Add css pseudo-class support for legacy browsers

--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/diagnostics.css">
 
 	<!--[if lte IE 8]>
-	<script src="js/css3-mediaqueries.js"></script>
+	<script src="js/vendor/css3-mediaqueries.js"></script>
+	<script src="js/vendor/selectivizr-min.js.js"></script>
 	<![endif]-->
 
 	<!-- GOOGLE ANALYTICS -->
