--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<!--[if lte IE 8]>
 	<script src="js/vendor/css3-mediaqueries.js"></script>
-	<script src="js/vendor/selectivizr-min.js.js"></script>
+	<script src="js/vendor/selectivizr-min.js"></script>
 	<![endif]-->
 
 	<!-- GOOGLE ANALYTICS -->
