Fix vertical align for checkboxes and radio buttons

--- a/demo.html
+++ b/demo.html
@@ -269,6 +269,49 @@
 
 			<hr>
 
+			<article id="radios">
+				<h2>Radios</h2>
+				<p>Put radios inside <code>li</code>.</p>
+				<form>
+					<ul class="horizontal">
+						<li>
+							<label for="male">Male</label>
+							<input type="radio" name="sex" id="male" value="male">
+						</li>
+						<li>
+							<label for="female">Female</label>
+							<input type="radio" name="sex" id="female" value="female">
+						</li>
+					</ul>
+				</form>
+				<form>
+					<ul class="vertical">
+						<li>
+							<label for="male2">Male</label>
+							<input type="radio" name="sex" id="male2" value="male">
+						</li>
+						<li>
+							<label for="female2">Female</label>
+							<input type="radio" name="sex" id="female2" value="female">
+						</li>
+					</ul>
+				</form>
+				<form>
+					<ul class="horizontal">
+						<li>
+							<input type="checkbox" name="vehicle" value="Bike">
+							<label for="vehicle">I have a bike</label>
+						</li>
+						<li>
+							<input type="checkbox" name="vehicle" value="Car">
+							<label for="vehicle">I have a car</label>
+						</li>
+					</ul>
+				</form>
+			</article>
+
+			<hr>
+
 			<article id="buttons">
 				<h2>Buttons</h2>
 				<p>Apply <code>.btn</code> class to any <code>a</code>, <code>input</code> or <code>button</code> tag.</p>
