Fix vertical alignment of button tag

--- a/demo.html
+++ b/demo.html
@@ -271,7 +271,7 @@
 
 			<article id="radios">
 				<h2>Radios</h2>
-				<p>Put radios inside <code>li</code>.</p>
+				<p>Put radios and checkboxes inside <code>li</code>.</p>
 				<form>
 					<ul class="horizontal">
 						<li>
